[project]
name = "oss-finalpj-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "oss-finalpj",
]

[tool.uv.sources]
oss-finalpj = { git = "https://github.com/calzsvg/grayscale.git" }
